<resources>
    <!-- Application name -->
    <string name="application_name">Best movie app ever!</string>

    <!-- Toolbar titles -->
    <string name="home_fragment_title">Home</string>
    <string name="genre_activity_title">Genres</string>
    <string name="favourite_movies_fragment_title">Favourite movies</string>
    <string name="search_fragment_title">Search</string>
    <string name="search_toolbar_text">Search</string>

    <!-- Bottom navigation view titles -->
    <string name="nav_favourites_fragment_name">Favourites</string>
    <string name="nav_browse_fragment_name">Browse</string>
    <string name="nav_home_fragment_name">Home</string>
    <string name="nav_graph_genres">Genres</string>

    <!-- Names of categories in Home Fragment -->
    <string name="category_popular">Popular</string>
    <string name="category_top_rated">Top Rated</string>
    <string name="category_upcoming">Upcoming</string>
    <string name="category_now_playing">Now playing</string>

    <!-- SnackBar dialogues -->
    <string name="Retry">Retry</string>
    <string name="connection">Check Connection</string>
    <string name="again">Try Again</string>

    <!-- ImageView descriptions -->
    <string name="poster_of_movie_desc">Poster of movie</string>
    <string name="star_img_desc">star img</string>
    <string name="poster_img_desc">poster img</string>
    <string name="rating_star_desc">rating_star</string>

    <!-- Genres icons -->
    <string name="genres_action">Action</string>
    <string name="genres_adventure">Adventure</string>
    <string name="genres_animation">Animation</string>
    <string name="genres_comedy">Comedy</string>
    <string name="genres_crime">Crime</string>
    <string name="genres_documentary">Documentary</string>
    <string name="genres_drama">Drama</string>
    <string name="genres_family">Family</string>
    <string name="genres_fantasy">Fantasy</string>
    <string name="genres_history">History</string>
    <string name="genres_horror">Horror</string>
    <string name="genres_music">Music</string>
    <string name="genres_mystery">Mystery</string>
    <string name="genres_romance">Romance</string>
    <string name="genres_science_fiction">Science Fiction</string>
    <string name="genres_tv_movie">TV Movie</string>
    <string name="genres_thriller">Thriller</string>
    <string name="genres_war">War</string>
    <string name="genres_western">Western</string>

    <!-- Other strings -->
    <string name="dots">...................................................................</string>
    <string name="revenue">Revenue:</string>
    <string name="production_country">Production country:</string>
    <string name="star_img">star img</string>
    <string name="poster_img">poster img</string>
    <string name="rating">Rating</string>
    <string name="watch_movie_trailer">Watch movie trailer:</string>
    <string name="production_company">Production company:</string>
    <string name="movie_title">Movie title…</string>
    <string name="unrated">Unrated</string>
    <string name="unknown">unknown</string>
    <string name="production_date">Production date:</string>
    <string name="category_title">category title</string>
    <string name="card_view_background">card view background</string>

    <string name="rating_star">rating_star</string>

    <string name="spinner_sort_popularity">Popularity</string>
    <string name="spinner_sort_primary_release_date">Release date</string>
    <string name="spinner_sort_original_title">Original title</string>
    <string name="spinner_sort_vote_average">Average vote</string>
    <string name="spinner_sort_vote_count">Vote count</string>
    <string name="deleted_movie_from_favorite_message">was deleted from favorite</string>
    <string name="added_movie_to_favorite_message">was added to favorite</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="browse_recycler_poster">browse_recycler_poster</string>


</resources>
