<?xml version="1.0" encoding="utf-8"?>

<<<<<<< HEAD:app/src/main/res/layout/row_recycler_info.xml
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
=======
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
>>>>>>> f867d1ad99367a384cac01160280c88c9675fa1f:app/src/main/res/layout/row_recycler_info.xml
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="12dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="12dp"
    android:layout_marginBottom="4dp"
    android:elevation="8dp"
    app:cardCornerRadius="6dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/card_view_background"
        android:scaleType="fitXY"
        android:src="@drawable/card_view_search_fragment_bg" />


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".activities.DataAdderActivity">

        <TextView
            android:id="@+id/rating_dl_txt_row_search_id"
<<<<<<< HEAD:app/src/main/res/layout/row_recycler_info.xml
            style="@style/ExoFontWhiteBold"
=======
            android:layout_width="0dp"
>>>>>>> f867d1ad99367a384cac01160280c88c9675fa1f:app/src/main/res/layout/row_recycler_info.xml

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
<<<<<<< HEAD:app/src/main/res/layout/row_recycler_info.xml
=======
            android:fontFamily="@font/exo_regular"
>>>>>>> f867d1ad99367a384cac01160280c88c9675fa1f:app/src/main/res/layout/row_recycler_info.xml
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/rating_img_details2"
            app:layout_constraintEnd_toEndOf="@+id/production_date_txt_dl_row_search_id"
            app:layout_constraintStart_toEndOf="@+id/rating_img_details2"
            app:layout_constraintTop_toTopOf="@+id/rating_img_details2" />

        <ImageView
            android:id="@+id/rating_img_details2"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
<<<<<<< HEAD:app/src/main/res/layout/row_recycler_info.xml
            android:contentDescription="@string/rating_star_desc"
=======
>>>>>>> f867d1ad99367a384cac01160280c88c9675fa1f:app/src/main/res/layout/row_recycler_info.xml
            android:cropToPadding="false"
            android:paddingEnd="-3dp"
            android:scaleX="0.9"
            android:scaleY="0.9"
            app:layout_constraintBottom_toBottomOf="@+id/rating_txt_row_search"
            app:layout_constraintStart_toEndOf="@+id/rating_txt_row_search"
            app:layout_constraintTop_toTopOf="@+id/rating_txt_row_search"
            app:srcCompat="@drawable/ic_star_full_yellow"
<<<<<<< HEAD:app/src/main/res/layout/row_recycler_info.xml
=======
            android:contentDescription="@string/rating_star"
>>>>>>> f867d1ad99367a384cac01160280c88c9675fa1f:app/src/main/res/layout/row_recycler_info.xml
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/rating_txt_row_search"
            style="@style/ExoFontWhiteBold"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="48dp"
<<<<<<< HEAD:app/src/main/res/layout/row_recycler_info.xml
=======
            android:fontFamily="@font/exo_regular"
>>>>>>> f867d1ad99367a384cac01160280c88c9675fa1f:app/src/main/res/layout/row_recycler_info.xml
            android:text="@string/rating"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/production_date_txt_row_search_id"
            app:layout_constraintTop_toBottomOf="@+id/production_date_txt_dl_row_search_id" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.4" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.54" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.48" />

<<<<<<< HEAD:app/src/main/res/layout/row_recycler_info.xml
        <android.support.v7.widget.CardView
            android:id="@+id/card_view2"
=======
        <ImageView
            android:id="@+id/poster_dl_id_row_search"

>>>>>>> f867d1ad99367a384cac01160280c88c9675fa1f:app/src/main/res/layout/row_recycler_info.xml
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
<<<<<<< HEAD:app/src/main/res/layout/row_recycler_info.xml
            android:layout_marginBottom="4dp"
            android:elevation="8dp"
            app:cardCornerRadius="6dp"
=======
            android:layout_marginBottom="6dp"
            android:src="@drawable/noposter"
>>>>>>> f867d1ad99367a384cac01160280c88c9675fa1f:app/src/main/res/layout/row_recycler_info.xml
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline5"
            app:layout_constraintStart_toStartOf="parent"
<<<<<<< HEAD:app/src/main/res/layout/row_recycler_info.xml
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/poster_dl_id_row_search"

                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:background="@color/dark_gray"
                android:contentDescription="@string/poster_img_desc"
                android:padding="3dp"
                android:scaleType="fitXY"
                android:src="@drawable/no_poster_available"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guideline5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </android.support.v7.widget.CardView>
=======
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/poster_img" />
>>>>>>> f867d1ad99367a384cac01160280c88c9675fa1f:app/src/main/res/layout/row_recycler_info.xml

        <TextView
            android:id="@+id/title_dl_txt_row_search_id"
            style="@style/ExoFontWhiteBold"

            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
<<<<<<< HEAD:app/src/main/res/layout/row_recycler_info.xml
            android:gravity="center_vertical"
            android:textSize="18sp"
=======
            android:fontFamily="@font/exo_regular"
            android:gravity="center_vertical"
            android:textSize="18sp"
            android:textStyle="bold"
>>>>>>> f867d1ad99367a384cac01160280c88c9675fa1f:app/src/main/res/layout/row_recycler_info.xml
            app:layout_constraintBottom_toTopOf="@+id/guideline3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline5"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/production_date_txt_dl_row_search_id"
<<<<<<< HEAD:app/src/main/res/layout/row_recycler_info.xml
            style="@style/ExoFontWhiteBold"
=======
            style="@style/GrayedOutText"
>>>>>>> f867d1ad99367a384cac01160280c88c9675fa1f:app/src/main/res/layout/row_recycler_info.xml

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:fontFamily="@font/exo_regular"
            app:layout_constraintEnd_toEndOf="@+id/title_dl_txt_row_search_id"
            app:layout_constraintStart_toEndOf="@+id/production_date_txt_row_search_id"
            app:layout_constraintTop_toTopOf="@+id/guideline3" />

        <TextView
            android:id="@+id/production_date_txt_row_search_id"
<<<<<<< HEAD:app/src/main/res/layout/row_recycler_info.xml
            style="@style/ExoFontWhiteBold"
=======
            style="@style/GrayedOutText"
>>>>>>> f867d1ad99367a384cac01160280c88c9675fa1f:app/src/main/res/layout/row_recycler_info.xml

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/production_date"
            app:layout_constraintStart_toStartOf="@+id/title_dl_txt_row_search_id"
            app:layout_constraintTop_toTopOf="@+id/guideline3" />

    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>
